@startuml 
hide circle
skinparam classAttributeIconSize 0
skinparam linetype ortho

class APIGateway {
}

class AuthController {
    - _repo: IAuthRepositories
    + RecoverPassword([FromBody] RecoverPasswordRequestDTO requestDTO): Task<IActionResult> 
}

interface IAuthRepositories<<interface>> {
    + ResetPassword(RecoverPasswordRequestDTO request): Task
}

class AuthRepositories {
    - _dao: AuthDAO
    + ResetPassword(RecoverPasswordRequestDTO request): Task
}

class AuthDAO {
    - _client.From<Profile> : ISupabaseTable<Profile>
    + ResetPassword(RecoverPasswordRequestDTO request): Task
}

class Profile {
    + Id: Guid
    + FullName: string
    + ProfilePicture: string
    + Bio: string
    + DateOfBirth: DateTime
    + CreatedAt: DateTime
    + UpdatedAt: DateTime
    + Role: string
    + AccountId: Guid
}


APIGateway -- AuthController

AuthController -- IAuthRepositories

IAuthRepositories <|-- AuthRepositories

AuthRepositories "1" -- "1..*" AuthDAO

AuthDAO  "1" -- "0..*"  Profile
@enduml